# src/routes.rs
@@ -56,4 +56,8 @@ pub fn build() -> Router<Arc<Context>> {
         .route("/v1/user/courses/{slug}/stages", get(stage::find_user_stages))
         .route("/v1/user/courses/{slug}/stages", post(stage::complete_stage))
         .route("/v1/user/courses/{slug}/stages/{stage_slug}", get(stage::get_user_stage))
+        .route(
+            "/v1/user/courses/{slug}/stages/{stage_slug}/status",
+            get(stage::stream_user_stage_status),
+        )
 }
